<resources>
    <string name="app_name">Group22_HW06</string>
    <string name="coursemanager">Course Manager</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notregistered">Not Registered?  </string>
    <string name="signup"> <u> Signup</u></string>
    <string name="registerFirstName">First name</string>
    <string name="registerLastName">Last name</string>
    <string name="password1">Password (min 8 characters)</string>
    <string name="register">Register</string>
    <string name="yourcourses">Your Courses</string>

    <string-array name="days">
        <item>Select</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="ampm">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="semester">
        <item>Select Semester</item>
        <item>Fall</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Winter</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="choose_instructor">Choose Instructor</string>
    <string name="schedule">Schedule</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="colon">:</string>
    <string name="credit_hrs">Credit Hours</string>
    <string name="semester">Semester</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="create_course">Create Course</string>
    <string name="email">Email</string>
    <string name="website">Personal website</string>
    <string name="create">Create</string>
    <string name="addInstructor">Add Instructor</string>
    <string name="home">Home</string>
    <string name="instructors">Instructors</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="instructor">Instructor</string>
</resources>
