<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bhargavnallani.coursemanager.Fragment_addInstructor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/addInstructorContainer">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/add_photo"
            android:id="@+id/instructorProfilePicture"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registerFirstName"
            android:layout_margin="10dp"
            android:backgroundTint="@color/lightblue"
            android:id="@+id/instructorFirstName"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registerLastName"
            android:layout_margin="10dp"
            android:backgroundTint="@color/lightblue"
            android:id="@+id/instructorLastName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:backgroundTint="@color/lightblue"
            android:id="@+id/instructorEmail"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/website"
            android:layout_margin="10dp"
            android:backgroundTint="@color/lightblue"
            android:id="@+id/instructorWebsite"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/reset"
                android:id="@+id/instructorBtnReset"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/add"
                android:id="@+id/instructorBtnAdd"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
