<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.bhargavnallani.coursemanager.Fragment_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:id="@+id/relativeLayoutLogin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_margin="20dp"
            android:backgroundTint="@color/lightblue"
            android:id="@+id/editUserName"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="20dp"
            android:backgroundTint="@color/lightblue"
            android:id="@+id/editPassword"

            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:text="@string/login"
            android:id="@+id/buttonLogin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="right"
                android:layout_below="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:text="Not registered?" />

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"

                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:clickable="true"
                android:text="@string/signup" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
